# dummy-bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs  qrcode.rs  survey.rs
