[package]
name = "dummy-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = true, features = [ "collector" ]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"